# SpecHub

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  components.json  docker-compose.yaml  drizzle.config.ts  eslint.config.mjs  eslint.config.test.ts  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/anchorstack/: finish.md  project.md
.github/workflows/: ci.yaml  ci.yml  docker-publish.yml  helm-publish.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
alembic/: env.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
context/: api-conventions.md  architecture.md  auth-conventions.md  database-conventions.md  deployment.md  entitlements.md  existing-feature-inventory.md  repo-structure.md  testing-strategy.md  third-party-services.md
database/: Dockerfile
docs/: architecture.md  deploy-openshift-crc.md  deploy-openshift.md  plan-auth-org.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
prompts/: commit.yaml  document.yaml  feature.yaml  finish.yaml  fix.yaml  iterate.yaml  new.yaml  plan.yaml  ralph.yaml  refactor.yaml  review.yaml  test.yaml
scripts/: rollout.sh  seed.py  setup-oc.sh
spec/: tenets.md
specs/: tenets.md
src/: proxy.test.ts  proxy.ts
tests/: conftest.py  test_apikeys.py  test_auth.py  test_hierarchy.py  test_mcp.py  test_mcp_session.py  test_projects.py  test_prompts.py  test_workflows.py
(+632 files in other folders)
